package com.crownrace.msg;

message heartbeat_req{
	required uint64 server_timestamp=1;
}

message heartbeat_ack{
	required int32 player_id=1;
}

message login_req{
	required string name=1;
	required string res_name=2;
}

message login_ack{
	required int32 player_id=1;
}

message leave_game_ntf{
	required int32 player_id=1;
}